# GraphMigrator

./: Architechture.md  CLAUDE.md  Cargo.toml  PRD.md
.beads/: issues.jsonl
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: discovery.rs  graph.rs  import.rs  lib.rs  queries.rs
crates/core/src/parser/: mod.rs  python.rs
crates/core/tests/: discovery_integration_test.rs
crates/core/tests/test-fixtures/: calls.py  calls_edge_cases.py  calls_with_unresolved.py  nested.py  sample.py
crates/core/tests/test-fixtures/discovery-project/: setup.py
crates/core/tests/test-fixtures/discovery-project/src/: main.py
crates/core/tests/test-fixtures/discovery-project/tests/: test_main.py
crates/core/tests/test-fixtures/multi-file-project/: main.py  module_a.py  module_b.py
docs/plans/: 2025-01-20-epic1-workspace-foundation.md  2025-01-20-epic2-python-parsing.md  2025-01-20-epic3-calls-edges.md  2025-01-20-modular-folder-structure.md  2025-01-21-epic4-file-discovery.md  2025-01-21-epic5-multi-file-parsing.md  2025-01-21-epic6-import-extraction.md  2025-01-21-epic7-import-resolution.md
