[package]
name = "graph-migrator-core"
version = "0.1.0"
edition = "2021"

[dependencies]
# Use workspace dependencies
petgraph = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
tree-sitter = "0.26"
tree-sitter-python = "0.25"
ignore = "0.4"
globset = "0.4"

[dev-dependencies]
serde_json = "1"
tempfile = "3"
